# elaborato

./: Amount.cpp  Amount.h  CMakeLists.txt  Date.cpp  Date.h  Register.cpp  Register.h  Transaction.cpp  Transaction.h  TransactionType.cpp  TransactionType.h  main.cpp
test/: CMakeLists.txt  test_amount.cpp  test_date.cpp  test_register.cpp  test_transaction.cpp  test_transactiontype.cpp
